# TauriSEQTA

./: .gitignore  .prettierrc  LICENSE  README.md  TODO.md  bun.lockb  ideas.md  lib.js  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  main.yml
docs/: api-faq.md  files-api.md  quick-answers.md  token-management.md
src/: App.vue  app.css  app.html  ck.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: login.rs
src-tauri/src/desqta-fs/: save.rs
src-tauri/src/mobilechanges/: login.rs
src-tauri/src/utils/: analytics.rs  netgrab.rs  session.rs  settings.rs
src/components/Editor/: Editor.svelte  EditorOverrideStyles.css  EditorStyles.css  userHTML.css
src/lib/: types.ts
src/lib/components/: AboutModal.svelte  AppHeader.svelte  AppSidebar.svelte  AssessmentBoardView.svelte  AssessmentCalendarView.svelte  AssessmentCard.svelte  AssessmentDetails.svelte  AssessmentHeader.svelte  AssessmentListView.svelte  AssessmentOverview.svelte  AssessmentSubmissions.svelte  AssessmentTabs.svelte  AssessmentViewTabs.svelte  CloudSyncModal.svelte  EmptyState.svelte  ErrorBoundary.svelte  FileCard.svelte  FileUploadButton.svelte  FocusTimer.svelte  GlobalSearch.svelte  GradeDistribution.svelte  GradePredictions.svelte  Homework.svelte  LoadingScreen.svelte  LoadingSpinner.svelte  LoginScreen.svelte  Modal.svelte  NoticesPane.svelte  PagesMenu.svelte  RawDataTable.svelte  ShortcutsWidget.svelte  TimetableExport.svelte  TimetableGrid.svelte  TimetableHeader.svelte  TimetableLesson.svelte  TimetablePdfViewer.svelte  Titlebar.svelte  TodaySchedule.svelte  TodoList.svelte  UpcomingAssessments.svelte  (+4 more)
src/lib/services/: authService.ts  cssInjectionService.ts  errorService.ts  geminiService.ts  themeService.ts  weatherService.ts
src/lib/stores/: theme.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/analytics/: +page.svelte
src/routes/assessments/: +page.svelte
src/routes/courses/: +page.svelte  types.ts  utils.ts
src/utils/: cache.ts  ckeditor.ts  errorHandler.ts  netUtil.ts  notify.ts  seqtaFetch.ts
static/peaks/: timer.mp3.reapeaks
(+73 files in other folders)
