[package]
name = "desqta"
version = "0.1.0"
description = "DesQTA, a port of SEQTA to the Desktop"
authors = ["BetterSEQTA+ Project"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desqta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2.0"

reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
time = "0.3"
url = "2.5"
tauri-plugin-notification = "2"
