[package]
name = "desqta"
version = "0.1.0"
description = "DesQTA, a port of SEQTA to the Desktop"
authors = ["BetterSEQTA+ Project"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desqta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2.0"
base64 = "0.22.1"

rss = "2.0.12"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "native-tls-alpn", "multipart"] }
tokio = { version = "1", features = ["full"] }
time = "0.3"
url = "2.5"
tauri-plugin-notification = "2"
urlencoding = "2.1"
tauri-plugin-single-instance = "2"
anyhow = "1.0.98"
xmltree = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
